<resources>
    <string name="app_name">Images Manipulator"</string>
    <string name="act_main_caption">Browse an image to toy with</string>

    <string name="act_main_btn_preview_txt">Preview image</string>
    <string name="act_main_selected_location_txt">Selected resource:</string>


    <string name="sdcard_failed_err">"Error! No SDCARD Found!"</string>

    <string name="image_view_btn_rotate">Rotate</string>
    <string name="image_view_btn_scale">scale</string>
    <string name="image_view_btn_blurify">blur</string>
    <string name="image_view_btn_togray">fade to gray</string>
</resources>
