<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImageEditActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/image_view_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constrainedWidth="true"
        app:layout_constraintRight_toRightOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_view_controll_panel"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_content"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/image_view_btn_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_view_btn_rotate" />

        <Button
            android:id="@+id/image_view_btn_rscale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_view_btn_scale" />

        <Button
            android:id="@+id/image_view_btn_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_view_btn_togray" />
        <Button
            android:id="@+id/image_view_btn_blurify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/image_view_btn_blurify" />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>