<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/act_main_files_activity_caption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/act_main_caption"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/filesViewContainer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarSize="12px"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="left"
        app:layout_constraintTop_toBottomOf="@id/act_main_files_activity_caption"
        app:layout_constraintBottom_toTopOf="@id/act_main_btn_preview"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
     />


    <TextView
        android:id="@+id/act_main_selected_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorAccent"
        android:padding="2pt"
        android:text="@string/act_main_selected_location_txt"


        app:layout_constraintBaseline_toBaselineOf="@id/act_main_btn_preview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filesViewContainer"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"

         />

    <Button
        android:id="@+id/act_main_btn_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginEnd="24dp"
        android:background="@color/colorPrimary"
        android:padding="5pt"
        android:text="@string/act_main_btn_preview_txt"


        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="@id/act_main_selected_location"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filesViewContainer"
       />


</android.support.constraint.ConstraintLayout>